--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "report:generate": "marge index.json --reportDir public --assetsDir public/assets --reportPageTitle index.html"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "cypress-multi-reporters": "^1.6.1",
     "jotai": "^1.8.3",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.0",
